Fixes z-index issue

--- a/public/stylesheets/layout-style.css
+++ b/public/stylesheets/layout-style.css
@@ -162,6 +162,7 @@ footer {
   display:flex;
   align-items: center;
   justify-content: center;
+  z-index: 10000;
 }
 
 .veil:hover {
